2012-09-24  Cache Team <cache-team@twitter.com>
	* twemcache: version 2.5.2 release
	* Feature: command line option for klog sampling rate, default is now 100
	* Fix: garbled data in suffix
	* Performance: avoid all unnecessary memcpy in processing prepend/apprend

2012-09-06  Cache Team <cache-team@twitter.com>
	* twemcache: version 2.5.1 release
	* Feature: slab LRC eviction (-M 8), designed for write through cases
	* Feature: auto klog rotation support, reopen after size reaches 1GB
	           klog is turned on if a filename is given at start time
	* Feature: Backporting fixed size (-e) hash feature from memcached 1.4.8
	* Cleanup: data flags and data length now stored as part of item header
	* Misc: updated TODO list

2012-07-16  Cache Team <cache-team@twitter.com>
	* twemcache: version 2.5.0 release
	* Feature: slab LRU eviction (-M 4) introduced
	           multiple eviction strategies can now be stacked
	* Fix: fix logical error of code and remove meaningless code (monadbobo)
	* Misc: new notes, updated TODO list
	        add twctop README

2012-07-10  Cache Team <cache-team@twitter.com>

	* twemcache: version 2.4.0 release
	  twemcache is the twitter memcached

2009-04-10

	* *critical bugfix*. In 1.2.7 under multithreaded mode, memcached
	  would never restart accepting connections after hitting the
	  maximum connection limit.

2009-04-02

	* Fix: Rewrote stat buffer handling (Trond)

2009-03-31

	* Feature:  -b option for configuring backlog

	* Feature:  stats settings

	* Fix: binary stat alignment bug (bug26)

	* Fix: buffer overflow in stats (bug27)

	* Fix: recycle memory more aggressively (bug14)

	* Fix: incr validation (bug31)

	* Fix: 64-bit incr/decr delta problem (bug21)

	* Fix: Ascii UDP set (bug36)

	* Fix: stats slabs' used chunks (bug29)

	* Fix: stats reset resetting more (bug22)

	* Misc: More tests, documentation, cleanliness (godliness)

	* Stable merge (stats, debuggability, listen bugs)

2009-03-11
